# TorroWhisper

./: .gitignore  .swiftlint.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  ROADMAP.md  appcast.xml  deny.toml  lefthook.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
apps/donny-macos/: Package.swift
apps/donny-macos/Bridge/: DonnyBridgeFFI.h  module.modulemap
apps/donny-macos/Resources/: Info.plist
apps/donny-macos/Sources/Donny/: AppDelegate.swift  AppModel.swift  BridgeClient.swift  BridgeModels.swift  Bundle+module.swift  DonnyApp.swift  FeedbackView.swift  HotkeyAssignmentAdvisor.swift  KeyboardHardwareMonitor.swift  Localization.swift  OnboardingView.swift  SettingsView.swift  UpdatesSettingsView.swift
apps/donny-macos/Tests/DonnyTests/: BridgeIntegrationTests.swift
apps/donnywhisper-macos/: Package.swift
apps/donnywhisper-macos/Bridge/: DonnyWhisperBridgeFFI.h  module.modulemap
apps/donnywhisper-macos/Resources/: Info.plist
apps/donnywhisper-macos/Sources/DonnyWhisper/: AppDelegate.swift  AppModel.swift  BridgeClient.swift  BridgeModels.swift  ChatThinkingSound.swift  DonnyWhisperApp.swift  FeedbackView.swift  HotkeyAssignmentAdvisor.swift  OnboardingView.swift  SettingsView.swift  UpdatesSettingsView.swift
apps/donnywhisper-macos/Tests/DonnyWhisperTests/: BridgeIntegrationTests.swift
apps/open-whisper-macos/: Package.swift
apps/open-whisper-macos/Bridge/: OpenWhisperBridgeFFI.h
apps/open-whisper-macos/Sources/OpenWhisperMac/: AppDelegate.swift  AppModel.swift  AppUIComponents.swift  BridgeClient.swift  BridgeModels.swift  ChatThinkingSound.swift  ChatTts.swift  ChatWindow.swift  CloudModelsSheet.swift  HotkeyRecorderField.swift  LanguageModelsManagerSheet.swift  MicSwitchToastView.swift  OnboardingView.swift  PluginsSettingsView.swift  RecordingIndicatorView.swift  SettingsView.swift  SpeechOutputSettings.swift  UpdaterController.swift  UpdatesSettingsView.swift
apps/torrowhisper-macos/: Package.swift
apps/torrowhisper-macos/Bridge/: TorroWhisperBridgeFFI.h  module.modulemap
apps/torrowhisper-macos/Resources/: AppIcon.icns  Info.plist
apps/torrowhisper-macos/Sources/TorroWhisper/: AppDelegate.swift  AppModel.swift  AppUIComponents.swift  AudioDeviceMonitor.swift  BridgeClient.swift  BridgeModels.swift  ChatTts.swift  CloudModelsSheet.swift  FeedbackView.swift  HotkeyAssignmentAdvisor.swift  HotkeyRecorderField.swift  LanguageModelsManagerSheet.swift  Localization.swift  OnboardingView.swift  OverviewView.swift  PluginsSettingsView.swift  RecordingIndicatorView.swift  SettingsView.swift  TorroBrand.swift  TorroBrandUI.swift  TorroWhisperApp.swift  UpdatesSettingsView.swift
apps/torrowhisper-macos/Tests/TorroWhisperTests/: BridgeIntegrationTests.swift
crates/donny-bridge/: Cargo.toml
crates/donny-bridge/src/: audio_export.rs  autostart.rs  chat.rs  dictation.rs  dictionary.rs  history_store.rs  i18n.rs  lib.rs  llm_model_manager.rs  local_llm.rs  logging.rs  model_manager.rs  permission_diagnostics.rs  plugin_api.rs  remote_models.rs  sessions_store.rs  settings_store.rs  speech_text.rs  text_inserter.rs  tts.rs
crates/donny-bridge/src/llm/: hermes.rs  keychain.rs  mod.rs  openai_compatible.rs  registry.rs
crates/donny-bridge/src/pipeline/: context.rs  mod.rs
crates/donny-core/: Cargo.toml
crates/donny-core/src/: lib.rs
crates/donny-llm-helper/: Cargo.toml
crates/donny-llm-helper/src/: main.rs
crates/donnywhisper-bridge/: Cargo.toml
crates/donnywhisper-bridge/src/: audio_export.rs  autostart.rs  chat.rs  dictation.rs  dictionary.rs  history_store.rs  i18n.rs  lib.rs  llm_model_manager.rs  local_llm.rs  logging.rs  model_manager.rs  permission_diagnostics.rs  plugin_api.rs  remote_models.rs  sessions_store.rs  settings_store.rs  text_inserter.rs  tts.rs
crates/donnywhisper-bridge/src/llm/: anthropic.rs  keychain.rs  mod.rs  openai_compatible.rs  registry.rs
crates/donnywhisper-bridge/src/pipeline/: context.rs  mod.rs
crates/donnywhisper-core/: Cargo.toml
crates/donnywhisper-llm-helper/: Cargo.toml
crates/open-whisper-bridge/: Cargo.toml
crates/open-whisper-bridge/src/: audio_export.rs  autostart.rs  chat.rs  dictation.rs  dictionary.rs  history_store.rs  i18n.rs  lib.rs  llm_model_manager.rs  local_llm.rs  logging.rs  model_manager.rs  plugin_api.rs  post_processing.rs  sessions_store.rs  tts.rs
crates/open-whisper-bridge/src/llm/: anthropic.rs  gemini.rs  hermes.rs  (+6 more)
crates/open-whisper-core/: Cargo.toml
crates/open-whisper-core/src/: lib.rs
crates/open-whisper-llm-helper/: Cargo.toml
crates/open-whisper-llm-helper/src/: main.rs
crates/torrowhisper-bridge/: Cargo.toml
crates/torrowhisper-bridge/src/: audio_export.rs  autostart.rs  benchmark.rs  chat.rs  diagnostics.rs  dictation.rs  dictionary.rs  history_store.rs  i18n.rs  lib.rs  llm_model_manager.rs  local_llm.rs  logging.rs  model_manager.rs  parakeet.rs  permission_diagnostics.rs  plugin_api.rs  plugin_log.rs  remote_models.rs  session_marker.rs  sessions_store.rs  settings_store.rs  streaming_transcription.rs  text_inserter.rs  transcript_stabilizer.rs  tts.rs
crates/torrowhisper-bridge/src/llm/: apple_foundation.rs  keychain.rs  lm_studio.rs  mod.rs  openai_compatible.rs  registry.rs
crates/torrowhisper-bridge/src/pipeline/: context.rs  mod.rs
crates/torrowhisper-bridge/src/pipeline/stages/: auto_correct.rs  dictionary.rs  llm.rs  mod.rs
crates/torrowhisper-bridge/tests/: benchmark_smoke.rs  ggml_log_hook.rs
crates/torrowhisper-core/: Cargo.toml
crates/torrowhisper-core/src/: lib.rs
crates/torrowhisper-llm-helper/: Cargo.toml
docs/: ACCESSIBILITY-AUDIT.md  ARCHITECTURE.md  CI.md  DEVELOPMENT.md  INSTALL.md  PLUGIN_API.md  RELEASING.md  TTS_TESTBENCH.md
docs/superpowers/plans/: 2026-04-18-sparkle-auto-updates.md
docs/superpowers/specs/: 2026-04-18-sparkle-auto-updates-design.md
scripts/: _appcast_insert.py  build-dmg.sh  build-macos-app.sh  codesign-macos.sh  dev.sh  generate-app-icon.swift  generate-placeholder-icon.swift  tts_testbench.py  update-appcast.sh
tests/: tts_testbench_test.py
(+29 files in other folders)
