[workspace]
members = [
    "crates/open-whisper-bridge",
    "crates/open-whisper-core",
    "crates/open-whisper-llm-helper",
]
resolver = "2"

[workspace.package]
version = "0.4.1"
edition = "2024"
license = "GPL-3.0-or-later"

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
