[workspace]
members = [
    "crates/torrowhisper-bridge",
    "crates/torrowhisper-core",
    "crates/torrowhisper-llm-helper",
]
resolver = "2"

[workspace.package]
version = "0.7.0"
edition = "2024"
license = "GPL-3.0-or-later"

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
