[package]
name = "torrowhisper-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
arboard = "3.6.1"
auto-launch = "0.6.0"
cpal = "0.17.3"
directories = "6.0.0"
enigo = { version = "0.6.1", features = ["wayland"] }
global-hotkey = "0.8.0"
# NOTE: llama-cpp-2 must never come back as a dependency here. It bundles a
# ggml revision that is incompatible with whisper-rs's bundled ggml; linking
# both into one binary mixes the duplicated symbols and crashes the app. The
# local LLM runs in the separate torrowhisper-llm-helper binary instead.
log = "0.4"
mp3lame-encoder = "0.2.1"
torrowhisper-core = { path = "../torrowhisper-core" }
regex = "1.11"
reqwest = { version = "0.13.2", features = ["blocking", "json", "rustls"] }
security-framework = "2"
serde.workspace = true
serde_json = "1.0.149"
sys-locale = "0.3"
sysinfo = { version = "0.38", default-features = false, features = ["system", "disk"] }
whisper-rs = "0.16.0"
