[package]
name = "torrowhisper-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
arboard = "3.6.1"
auto-launch = "0.6.0"
cpal = "0.17.3"
directories = "6.0.0"
enigo = { version = "0.6.1", features = ["wayland"] }
global-hotkey = "0.7.0"
# NOTE: llama-cpp-2 must never come back as a dependency here. It bundles a
# ggml revision that is incompatible with whisper-rs's bundled ggml; linking
# both into one binary mixes the duplicated symbols and crashes the app. The
# local LLM runs in the separate torrowhisper-llm-helper binary instead.
log = "0.4"
mp3lame-encoder = "0.2.1"
torrowhisper-core = { path = "../torrowhisper-core" }
regex = "1.11"
reqwest = { version = "0.13.2", features = ["blocking", "json", "rustls"] }
security-framework = "2"
serde.workspace = true
serde_json = "1.0.149"
sys-locale = "0.3"
sysinfo = { version = "0.38", default-features = false, features = ["system", "disk"] }
# log_backend routes whisper.cpp/GGML output through the `log` crate into
# our file logger instead of stderr (which is lost in a bundled app).
whisper-rs = { version = "0.16.0", features = ["log_backend"] }

[dev-dependencies]
# Visible to the integration tests (tests/ggml_log_hook.rs); features unify
# with the main dependency above, so this adds no extra build cost.
whisper-rs = { version = "0.16.0", features = ["log_backend"] }
