[package]
name = "torrowhisper-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
arboard = "3.6.1"
auto-launch = "0.6.0"
cpal = "0.17.3"
directories = "6.0.0"
enigo = { version = "0.6.1", features = ["wayland"] }
global-hotkey = "0.7.0"
# Used only for `proc_pidinfo` (RSS + thread count) in the diagnostics
# heartbeat; already present transitively, so no new download.
libc = "0.2"
# NOTE: llama-cpp-2 must never come back as a dependency here. It bundles a
# ggml revision that is incompatible with whisper-rs's bundled ggml; linking
# both into one binary mixes the duplicated symbols and crashes the app. The
# local LLM runs in the separate torrowhisper-llm-helper binary instead.
log = "0.4"
mp3lame-encoder = "0.2.1"
torrowhisper-core = { path = "../torrowhisper-core" }
regex = "1.11"
reqwest = { version = "0.13.2", features = ["blocking", "json", "rustls"] }
security-framework = "2"
serde.workspace = true
serde_json = "1.0.149"
sys-locale = "0.3"
sysinfo = { version = "0.39", default-features = false, features = ["system", "disk"] }
# whisper-rs is declared per-target below so macOS can add the `metal` feature
# (GPU inference) without forcing it onto Windows/Linux builds. `log_backend`
# routes whisper.cpp/GGML output through the `log` crate into our file logger
# instead of stderr (which is lost in a bundled app).

# macOS: enable Metal so whisper.cpp runs inference on the GPU. Metal exists on
# both Apple Silicon and Intel Macs (whisper.cpp falls back to CPU cleanly when
# no suitable GPU is present), so a single macOS block covers the universal
# (arm64 + x86_64) build. Feature must stay confined to whisper-rs's own ggml —
# see the llama-cpp-2 warning above.
[target.'cfg(target_os = "macos")'.dependencies]
whisper-rs = { version = "0.16.0", features = ["log_backend", "metal"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
whisper-rs = { version = "0.16.0", features = ["log_backend"] }

# Dev-deps mirror the per-target split; otherwise the test binary would unify to
# the non-metal variant and the ggml log-hook test would exercise a CPU-only
# build even on macOS.
[target.'cfg(target_os = "macos")'.dev-dependencies]
whisper-rs = { version = "0.16.0", features = ["log_backend", "metal"] }

[target.'cfg(not(target_os = "macos"))'.dev-dependencies]
whisper-rs = { version = "0.16.0", features = ["log_backend"] }
