[package]
name = "torrowhisper-llm-helper"
version.workspace = true
edition.workspace = true
license.workspace = true

# Standalone worker process for local LLM post-processing.
#
# llama-cpp-2 must NOT be linked into the same binary as whisper-rs: both
# bundle their own (incompatible) ggml revision, and the linker silently mixes
# the two copies into one runtime — shifted ggml_op enum values then dispatch
# wrong compute kernels, which corrupts memory and crashes the whole app
# intermittently. Keeping llama in its own executable gives each library its
# own consistent ggml.

[[bin]]
name = "torrowhisper-llm-helper"
path = "src/main.rs"

[dependencies]
encoding_rs = "0.8.35"
llama-cpp-2 = { version = "0.1.143", default-features = false, features = ["metal"] }
serde = { workspace = true }
serde_json = "1.0.149"
